# tongfang-touchpad

./: Cargo.toml  LICENSE  README.md
rules/: 99-tongfang-touchpad-toggle.rules
src/: main.rs
tongfang-touchpad/: Cargo.toml
tongfang-touchpad-cinnamon/: Cargo.toml
tongfang-touchpad-daemon/: Cargo.toml  tongfang-touchpad-daemon.desktop
tongfang-touchpad-daemon/src/: error.rs  lib.rs  main.rs  power.rs  resume.rs  settings.rs
tongfang-touchpad-lib/: Cargo.toml
tongfang-touchpad-lib/src/: error.rs  lib.rs  state.rs
tongfang-touchpad-toggle/: Cargo.toml
tongfang-touchpad-toggle/src/: main.rs
tongfang-touchpad/rules/: 99-tongfang-touchpad.rules
tongfang-touchpad/src/: main.rs
