[workspace]
resolver = "2"

members = [ "tongfang-touchpad-cinnamon","tongfang-touchpad-lib", "tongfang-touchpad-toggle"]

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
struct_excessive_bools = "allow"
trivially_copy_pass_by_ref = "allow"
must_use_candidate = "allow"
match_bool = "allow"
no_effect_underscore_binding = "allow"
module_name_repetitions = "allow"

[workspace.lints.rust]
meta_variable_misuse = "warn"
missing_abi = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "warn"
pointer_structural_match = "warn"
rust_2018_idioms = "warn"
rust_2021_compatibility = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
let_underscore_drop = "allow"
