[package]
name = "tongfang-touchpad"
authors = ["Bogdan Mircea <mirceapetrebogdan@gmail.com>"]
description = "Binary that sets touchpad LED switch on TongFang GM7PX9N laptops"
license = "MIT"
version = "0.1.0"
edition = "2021"

[package.metadata.deb]
assets = [
    [
        "target/release/tongfang-touchpad",
        "usr/bin/",
        "755",
    ],
    [
        "rules/99-tongfang-touchpad.rules",
        "lib/udev/rules.d/",
        "644",
    ],
]

[dependencies]
tongfang-touchpad-lib = { path = "../tongfang-touchpad-lib" }
clap = { version = "4.5", features = ["derive"] }

[lints]
workspace = true
